--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,8 +1,6 @@
-@use 'font';
+@use 'surface';
 @use 'button';
 @use 'appbar';
-@use 'grid';
-@use 'flexbox';
 @use 'navrail';
 @use 'navlink';
 @use 'iconbutton';
