--- a/src/styles/components/_appbar.scss
+++ b/src/styles/components/_appbar.scss
@@ -1,146 +1,63 @@
-%appbar-style {
+.material-appbar {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  background-color: var(--color-surface);
-  color: var(--color-on-surface);
   transition-property: background-color, box-shadow, height;
   transition-duration: var(--ease-emphasized-duration);
   transition-timing-function: var(--ease-emphasized);
 
-  &[data-sticky] {
+  &:not([class*='container-color']) {
+    background-color: var(--color-surface);
+    color: var(--color-on-surface);
+  }
+
+  &.sticky {
     position: sticky;
     top: 0;
     z-index: 3;
 
-    &[data-scrolled] {
+    &.scrolled {
       box-shadow: var(--elevation-2);
 
-      &:not([data-color]) {
+      &:not([class*='container-color']) {
         background-color: var(--color-surface-container);
       }
     }
   }
 
-  &[data-color='primary'] {
-    background-color: var(--color-primary);
-    color: var(--color-on-primary);
-  }
-
-  &[data-color='primary-container'] {
-    background-color: var(--color-primary-container);
-    color: var(--color-on-primary-container);
-  }
-
-  &[data-color='secondary'] {
-    background-color: var(--color-secondary);
-    color: var(--color-on-secondary);
-  }
-
-  &[data-color='secondary-container'] {
-    background-color: var(--color-secondary-container);
-    color: var(--color-on-secondary-container);
-  }
-
-  &[data-color='tertiary'] {
-    background-color: var(--color-tertiary);
-    color: var(--color-on-tertiary);
-  }
-
-  &[data-color='tertiary-container'] {
-    background-color: var(--color-tertiary-container);
-    color: var(--color-on-tertiary-container);
-  }
-
-  &[data-color='inverse-surface'] {
-    background-color: var(--color-inverse-surface);
-    color: var(--color-on-inverse-surface);
-  }
-
   > [role='toolbar'] {
-    display: flex;
-    align-items: center;
-    width: 100%;
     height: 64px;
-    max-width: var(--content-max-width);
-    margin: 0 auto;
-    padding-inline: var(--spacing-sm);
     flex-shrink: 0;
 
     > .headline {
       flex: auto;
-      padding-inline: var(--spacing-sm);
-    }
-
-    > .start-node,
-    > .end-node {
-      display: flex;
-      align-items: center;
-    }
-
-    > .start-node {
-      justify-content: flex-start;
-    }
-
-    > .end-node {
-      justify-content: flex-end;
     }
   }
 
-  &[data-fluid] {
-    > [role='toolbar'] {
-      max-width: unset;
-    }
-  }
-
-  > h1 {
-    width: 100%;
-    max-width: var(--content-max-width);
-    margin: 0 auto;
-  }
-
-  h1.hide,
-  span.hide {
-    transition: opacity var(--ease-emphasized-duration) var(--ease-emphasized);
-    opacity: 0;
-  }
-}
-
-.material-appbar {
-  &-center-aligned {
-    @extend %appbar-style;
-    height: 64px;
-  }
-
-  &-small {
-    @extend %appbar-style;
-    height: 64px;
-  }
-
-  &-medium {
-    @extend %appbar-style;
-    height: 112px;
-
-    &[data-scrolled] {
+  &.variant {
+    &-center-aligned {
       height: 64px;
     }
 
-    > h1 {
-      padding: 24px 16px;
-    }
-  }
-
-  &-large {
-    @extend %appbar-style;
-    height: 152px;
-
-    &[data-scrolled] {
+    &-small {
       height: 64px;
     }
 
-    > h1 {
-      padding: 28px 16px;
+    &-medium {
+      height: 112px;
+
+      &.scrolled {
+        height: 64px;
+      }
+    }
+
+    &-large {
+      height: 152px;
+
+      &.scrolled {
+        height: 64px;
+      }
     }
   }
 }
