--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,88 +1,77 @@
 @use '../mixin';
-@use '../spacing';
-@use '../max-content';
 
-%card-style {
+.material-card {
   border-radius: var(--shape-md);
   transition-property: box-shadow;
   transition-duration: var(--ease-emphasized-duration);
   transition-timing-function: var(--ease-emphasized);
-}
 
-.material-card {
-  &-elevated {
-    @extend %card-style;
-    @extend %spacing-rules;
-    @extend %max-content-styles;
-    background-color: var(--color-surface-container-low);
-    box-shadow: var(--elevation-1);
+  &.variant {
+    &-elevated {
+      background-color: var(--color-surface-container-low);
+      box-shadow: var(--elevation-1);
 
-    @include mixin.unify-parent('button') {
-      &:hover {
-        box-shadow: var(--elevation-2);
+      @include mixin.unify-parent('button') {
+        &:hover {
+          box-shadow: var(--elevation-2);
+        }
+      }
+
+      @include mixin.unify-parent('a') {
+        &:hover {
+          box-shadow: var(--elevation-2);
+        }
+      }
+
+      @include mixin.unify-parent('[role=' button ']') {
+        &:hover {
+          box-shadow: var(--elevation-2);
+        }
       }
     }
 
-    @include mixin.unify-parent('a') {
-      &:hover {
-        box-shadow: var(--elevation-2);
+    &-filled {
+      background-color: var(--color-surface-container-highest);
+
+      @include mixin.unify-parent('button') {
+        &:hover {
+          box-shadow: var(--elevation-1);
+        }
+      }
+
+      @include mixin.unify-parent('a') {
+        &:hover {
+          box-shadow: var(--elevation-1);
+        }
+      }
+
+      @include mixin.unify-parent('[role=' button ']') {
+        &:hover {
+          box-shadow: var(--elevation-1);
+        }
       }
     }
 
-    @include mixin.unify-parent('[role=' button ']') {
-      &:hover {
-        box-shadow: var(--elevation-2);
+    &-outlined {
+      background-color: var(--color-surface);
+      border: 1px solid var(--color-outline);
+
+      @include mixin.unify-parent('button') {
+        &:hover {
+          box-shadow: var(--elevation-1);
+        }
       }
-    }
-  }
 
-  &-filled {
-    @extend %card-style;
-    @extend %spacing-rules;
-    @extend %max-content-styles;
-    background-color: var(--color-surface-container-highest);
-
-    @include mixin.unify-parent('button') {
-      &:hover {
-        box-shadow: var(--elevation-1);
+      @include mixin.unify-parent('a') {
+        &:hover {
+          box-shadow: var(--elevation-1);
+        }
       }
-    }
 
-    @include mixin.unify-parent('a') {
-      &:hover {
-        box-shadow: var(--elevation-1);
-      }
-    }
-
-    @include mixin.unify-parent('[role=' button ']') {
-      &:hover {
-        box-shadow: var(--elevation-1);
-      }
-    }
-  }
-
-  &-outlined {
-    @extend %card-style;
-    @extend %spacing-rules;
-    @extend %max-content-styles;
-    background-color: var(--color-surface);
-    border: 1px solid var(--color-outline);
-
-    @include mixin.unify-parent('button') {
-      &:hover {
-        box-shadow: var(--elevation-1);
-      }
-    }
-
-    @include mixin.unify-parent('a') {
-      &:hover {
-        box-shadow: var(--elevation-1);
-      }
-    }
-
-    @include mixin.unify-parent('[role=' button ']') {
-      &:hover {
-        box-shadow: var(--elevation-1);
+      @include mixin.unify-parent('[role=' button ']') {
+        &:hover {
+          box-shadow: var(--elevation-1);
+        }
       }
     }
   }
