--- a/src/styles/components/_divider.scss
+++ b/src/styles/components/_divider.scss
@@ -1,22 +1,15 @@
-%divider-style {
+.material-divider {
   display: flex;
   border: none;
   background-color: transparent;
   transition-property: border-color;
   transition-duration: var(--ease-emphasized-duration);
   transition-timing-function: var(--ease-emphasized);
-}
+  width: 100%;
+  height: 1px;
+  border-top: 1px solid var(--color-outline-variant);
 
-.material-divider {
-  &-horizontal {
-    @extend %divider-style;
-    width: 100%;
-    height: 1px;
-    border-top: 1px solid var(--color-outline-variant);
-  }
-
-  &-vertical {
-    @extend %divider-style;
+  &.vertical {
     width: 1px;
     align-self: stretch;
     min-height: 1.5em;
