fix: Modifiers tag styles in the reset stylesheet Resolves issue #37

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   outline: none;
+  font: inherit;
 }
 
 html,
@@ -35,6 +36,16 @@ button {
 pre,
 code {
   font: var(--text-code);
+}
+
+strong,
+b {
+  font-weight: 500;
+}
+
+em,
+i {
+  font-style: italic;
 }
 
 input::-ms-reveal,
