enhance: Changes the standard version of Navdrawer to xlarge size
Resolves issue #40

--- a/src/styles/components/_navrail.scss
+++ b/src/styles/components/_navrail.scss
@@ -18,12 +18,16 @@
   transition-duration: var(--ease-emphasized-duration);
   transition-timing-function: var(--ease-emphasized);
 
+  > [role='presentation'] {
+    flex: auto;
+  }
+
   @media screen and (max-width: 599px) {
     display: none;
   }
 
-  @media screen and (min-width: 1200px) {
-    &.hide-on-large {
+  @media screen and (min-width: 1400px) {
+    &.hide-on-xlarge {
       display: none;
     }
   }
